MON-9827 Quicklinks icon hover color fixed. lightbox horizontal scrollbar fixed, scrollbar will display if we have more content required input fields have red borders, "if input value is empty"

--- a/application/media/css/lightbox.css
+++ b/application/media/css/lightbox.css
@@ -65,7 +65,7 @@
 .lightbox-content {
   flex: auto 0.1 1;
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
   font-size: 10pt;
   padding: 16px;
   min-height: 32px;
@@ -99,4 +99,8 @@
 .lightbox-footer input[type="reset"]:hover {
   background: none;
   color: #30a0b4;
+}
+
+.nj-form-field input:invalid {
+    border:1px solid #FF0000 !important;
 }
