--- a/modules/form/views/form/form.css
+++ b/modules/form/views/form/form.css
@@ -461,7 +461,7 @@ form.nj-form div.nj-form-icon {
 }
 
 form.nj-form div.nj-form-icon:hover {
-  background: #82cd60;
+  background: #999;
 }
 
 form.nj-form div.nj-form-icon.active {
